Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignBooleanBoolObj.quorum
Boolean bool
bool:SetValue(true)
boolean b = bool
output b