Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntegerBoolObjWrapped.quorum
class main
    action main
        Boolean bool
        bool:setValue(true)
        integer i = bool
    end
end